# yelp-prediction

./: .gitattributes  .gitignore  README.md  best_mil_model.pth  download-data.sh  finetuning_2layer.ipynb  notebook.ipynb  original.ipynb  predictions-analysis.ipynb  pyproject.toml  raw_dataset_analysis.ipynb  yelp.ipynb
data/try_enhance/models/: best_clip__default__dims1024-512__lr0.001.pth  best_clip__headmlp__dims1024-512__actgelu__do0p3__b1__lossmae__optadamw__wd0p01__lr0p0005__l20__seed42__tf0p8__mpb0__pat5.pth  best_clip__mlp__dims1024-512__lr0.0005.pth  best_sweepquick_20251217_233110__001.pth  best_sweepquick_20251217_233110__002.pth  (+30 more)
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
notebook/: finetuning_2layer.ipynb  models_gpu.ipynb  readme.md
notebooks/: 01_plot_predictions.ipynb  02_bias_diagnostics.ipynb
reports/diagnostics/: coverage_summary.txt  mae_by_photo_bucket.csv  mae_by_review_bucket.csv  preds_joined_coverage.csv
reports/figures/: val_predictions.csv
src/: RatingPredictor.py  YelpBagDataset.py  dataframes.py  train.py
src/yelp_prediction/: RatingPredictor.py  YelpBagDataset.py  YelpFeatureDataset.py  bias_utils.py  check.py  check_features.py  compare_training_logs.ipynb  compute_features.py  dataframes.py  dataset.py  diagnose_bias.py  eval_utils.py  finetune_clip_last2.py  main.py  main_MIL.py  main_single_photo.py  model.py  plot_predictions.py  script_train.py  selection.py  server.py  sweep_try_enhance.py  train.py  train_features.py  train_features_MIL.py  try_enhance.py
(+75 files in other folders)
