[project]
name = "yelp-prediction"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12.12,<3.15"
dependencies = [
  "numpy (>=2.3.5,<3.0.0)",
  "polars (==1.31.0)",
  "torch (==2.9.0)",
  "torchvision (==0.24.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "matplotlib (>=3.10.8,<4.0.0)",
  "transformers (>=4.57.3,<5.0.0)",
  "fastapi (>=0.124.4,<0.125.0)",
  "uvicorn (>=0.38.0,<0.39.0)",
  "pillow (>=12.0.0,<13.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.poetry]
package-mode = false

[tool.pyright]
extraPaths = ["./src/yelp_prediction"]
